# miniSQL

./: .gitignore  API.cpp  API.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  CatalogManager.cpp  CatalogManager.h  CommonHead.h  Interpreter.cpp  Interpreter.h  main.cpp
Utility/: BpTree.cpp  BpTree.h  BufferManager.cpp  BufferManager.h  CatalogManager.cpp  CatalogManager.h  IndexManager.cpp  IndexManager.h  RecordManager.cpp  RecordManager.h  Table.cpp  Table.h
